--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "claude",
+  "name": "wowstatus",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^5.2.1",
+    "express": "^4.18.2",
     "wow-realm-status": "^2.0.1"
   }
 }
